<resources>
    <string name="app_name">AuctionApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prf_nameLabel">Names:</string>
    <string name="prf_lastNameLabel">Last Names:</string>
    <string name="prf_ageLabel">Age:</string>
    <string name="prf_idDocumentLabel">Document ID: </string>
    <string name="prf_saveButton">Save</string>
    <string name="prf_genderLabel">Gender:</string>
    <string name="prf_genderM">Male</string>
    <string name="prf_genderF">Female</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
